[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = "0.14.0"
etagere = "0.2.6"
lru = "0.9"

[dependencies.cosmic-text]
features = ["std", "swash"]
git = "https://github.com/hecrj/cosmic-text"
rev = "dc83efbf00a2efb4118403538e8a47bfd69c3e5e"

[dev-dependencies]
winit = "0.27.0"
pollster = "0.2.5"
